MINIFICPP-786 - GetFile processor doesn't seem to work with default configuration on Win, logged details are insufficient, too