libminifi/src/processors/GetFile.cpp
@@ -41,9 +41,6 @@
 #include "core/ProcessSession.h"
 #include "core/TypedValues.h"
 
-#ifndef S_ISDIR
-#define S_ISDIR(mode)  (((mode) & S_IFMT) == S_IFDIR)
-#endif
 #define R_OK    4       /* Test for read permission.  */
 #define W_OK    2       /* Test for write permission.  */
 #define F_OK    0       /* Test for existence.  */
@@ -211,6 +208,8 @@ bool GetFile::isListingEmpty() {
 }
 
 void GetFile::putListing(std::string fileName) {
+  logger_->log_trace("Adding file to queue: %s", fileName);
+
   std::lock_guard<std::mutex> lock(mutex_);
 
   _dirList.push(fileName);
@@ -220,15 +219,14 @@ void GetFile::pollListing(std::queue<std::string> &list, const GetFileRequest &r
   std::lock_guard<std::mutex> lock(mutex_);
 
   while (!_dirList.empty() && (request.batchSize == 0 || list.size() < request.batchSize)) {
-    std::string fileName = _dirList.front();
+    list.push(_dirList.front());
     _dirList.pop();
-    list.push(fileName);
   }
-
-  return;
 }
 
 bool GetFile::acceptFile(std::string fullName, std::string name, const GetFileRequest &request) {
+  logger_->log_trace("Checking file: %s", fullName);
+
   struct stat statbuf;
 
   if (stat(fullName.c_str(), &statbuf) == 0) {
@@ -277,65 +275,14 @@ bool GetFile::acceptFile(std::string fullName, std::string name, const GetFileRe
 }
 
 void GetFile::performListing(std::string dir, const GetFileRequest &request) {
-#ifndef WIN32
-  DIR *d;
-  d = opendir(dir.c_str());
-  if (!d)
-    return;
-  // only perform a listing while we are not empty
-  logger_->log_debug("Performing file listing against %s", dir);
-  while (isRunning()) {
-    struct dirent *entry;
-    entry = readdir(d);
-    if (!entry)
-      break;
-    std::string d_name = entry->d_name;
-    std::string path = dir + "/" + d_name;
-    struct stat statbuf { };
-    if (stat(path.c_str(), &statbuf) != 0) {
-      logger_->log_warn("Failed to stat %s", path);
-      break;
+  auto callback = [this, request](const std::string& dir, const std::string& filename) -> bool{
+    std::string fullpath = dir + utils::file::FileUtils::get_separator() + filename;
+    if (acceptFile(fullpath, filename, request)) {
+      putListing(fullpath);
     }
-    if (S_ISDIR(statbuf.st_mode)) {
-      // if this is a directory
-      if (request.recursive && strcmp(d_name.c_str(), "..") != 0 && strcmp(d_name.c_str(), ".") != 0) {
-        performListing(path, request);
-      }
-    } else {
-      if (acceptFile(path, d_name, request)) {
-        // check whether we can take this file
-        putListing(path);
-      }
-    }
-  }
-  closedir(d);
-#else
-  HANDLE hFind;
-  WIN32_FIND_DATA FindFileData;
-
-  if ((hFind = FindFirstFile(dir.c_str(), &FindFileData)) != INVALID_HANDLE_VALUE) {
-    do {
-      struct stat statbuf {};
-      if (stat(FindFileData.cFileName, &statbuf) != 0) {
-        logger_->log_warn("Failed to stat %s", FindFileData.cFileName);
-        break;
-      }
-
-      std::string path = dir + "/" + FindFileData.cFileName;
-      if (S_ISDIR(statbuf.st_mode)) {
-        if (request.recursive && strcmp(FindFileData.cFileName, "..") != 0 && strcmp(FindFileData.cFileName, ".") != 0) {
-          performListing(path, request);
-        }
-      } else {
-        if (acceptFile(path, FindFileData.cFileName, request)) {
-          // check whether we can take this file
-          putListing(path);
-        }
-      }
-    }while (FindNextFile(hFind, &FindFileData));
-    FindClose(hFind);
-  }
-#endif
+    return isRunning();
+  };
+  utils::file::FileUtils::list_dir(dir, callback, logger_, request.recursive);
 }
 
 int16_t GetFile::getMetricNodes(std::vector<std::shared_ptr<state::response::ResponseNode>> &metric_vector) {
